logs/Slang/generated/hdlconv/hdlconvertor_p716.sv.log
name: hdlconvertor_p716
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p716.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p716.sv:14:1: error: unknown module 'DFF'
DFF dff[M-1:0][1:N](Outs, Ins, clk);
^~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p716.sv:19:22: error: scalar type cannot be indexed
assign out[I] = Outs[I][1];
                ~~~~~^~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p716.sv:20:12: error: scalar type cannot be indexed
assign Ins[I][J] = Outs[I][2];
       ~~~~^~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p716.sv:20:25: error: scalar type cannot be indexed
assign Ins[I][J] = Outs[I][2];
                   ~~~~~^~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p716.sv:22:21: error: scalar type cannot be indexed
default: assign Ins[I][J] = Outs[I][J+1];
                ~~~~^~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p716.sv:22:34: error: scalar type cannot be indexed
default: assign Ins[I][J] = Outs[I][J+1];
                            ~~~~~^~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p716.sv:23:15: error: scalar type cannot be indexed
N: assign Ins[I][N] = in[I];
          ~~~~^~~~~
